fix eDetail icons

--- a/internal/projects/bulleit/Interfaces/OtherDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/OtherDetailViewController.xib
@@ -142,7 +142,7 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">cat_icon_other_large.png</string>
+									<string key="NSResourceName">cat_icon_eDetail_other.png</string>
 								</object>
 							</object>
 							<object class="IBUIView" id="38975652">
@@ -1141,7 +1141,7 @@
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>call_action_button_bg@2x.png</string>
-				<string>cat_icon_other_large.png</string>
+				<string>cat_icon_eDetail_other.png</string>
 				<string>logo_itunes.png</string>
 				<string>main_action_button_bg@2x.png</string>
 				<string>map_inner_shadow.png</string>
@@ -1150,7 +1150,7 @@
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{23, 50}</string>
-				<string>{16, 16}</string>
+				<string>{11, 16}</string>
 				<string>{16, 16}</string>
 				<string>{11, 50}</string>
 				<string>{16, 16}</string>
