--- a/internal/projects/bulleit/Interfaces/FilmDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/FilmDetailViewController.xib
@@ -141,7 +141,7 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">cat_icon_film_large</string>
+									<string key="NSResourceName">cat_icon_eDetail_film.png</string>
 								</object>
 							</object>
 							<object class="IBUIView" id="31986916">
@@ -281,7 +281,7 @@
 								<string key="NSFrame">{{207, 40}, {98, 144}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="947342865"/>
+								<reference key="NSNextKeyView" ref="379087290"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
 								<int key="IBUIContentMode">1</int>
@@ -323,7 +323,7 @@
 								<string key="NSFrameSize">{320, 365}</string>
 								<reference key="NSSuperview" ref="947342865"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="379087290"/>
+								<reference key="NSNextKeyView" ref="582508261"/>
 								<string key="NSReuseIdentifierKey">_NS:366</string>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -346,7 +346,7 @@
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="582508261"/>
+				<reference key="NSNextKeyView" ref="947342865"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -769,7 +769,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIImageView</string>
 							<string>UILabel</string>
-							<string>UIImageView</string>
+							<string>STImageView</string>
 							<string>UIActivityIndicatorView</string>
 							<string>UIButton</string>
 							<string>UILabel</string>
@@ -808,7 +808,7 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">imageView</string>
-								<string key="candidateClassName">UIImageView</string>
+								<string key="candidateClassName">STImageView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">loadingView</string>
@@ -857,13 +857,11 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>affiliateLogoView</string>
-							<string>imageView</string>
 							<string>ratingView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIImageView</string>
-							<string>STImageView</string>
 							<string>UIImageView</string>
 						</object>
 					</object>
@@ -872,7 +870,6 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>affiliateLogoView</string>
-							<string>imageView</string>
 							<string>ratingView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -880,10 +877,6 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">affiliateLogoView</string>
 								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">imageView</string>
-								<string key="candidateClassName">STImageView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">ratingView</string>
@@ -937,13 +930,13 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>cat_icon_film_large</string>
+				<string>cat_icon_eDetail_film.png</string>
 				<string>main_action_button_bg@2x.png</string>
 				<string>shelf_background.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{16, 16}</string>
+				<string>{15, 16}</string>
 				<string>{11, 50}</string>
 				<string>{320, 365}</string>
 			</object>
