--- a/internal/projects/bulleit/Interfaces/PlaceDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/PlaceDetailViewController.xib
@@ -50,6 +50,7 @@
 						<string key="NSFrame">{{150, 208}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -145,7 +146,7 @@ MA</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">cat_icon_food_large.png</string>
+									<string key="NSResourceName">cat_icon_eDetail_food.png</string>
 								</object>
 							</object>
 							<object class="IBUIView" id="728574616">
@@ -390,7 +391,7 @@ MA</string>
 										<string key="NSFrameSize">{320, 1}</string>
 										<reference key="NSSuperview" ref="985904730"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="1024577213"/>
+										<reference key="NSNextKeyView" ref="230223094"/>
 										<string key="NSReuseIdentifierKey">_NS:180</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
 											<int key="NSColorSpace">1</int>
@@ -436,7 +437,7 @@ MA</string>
 								<string key="NSFrameSize">{320, 365}</string>
 								<reference key="NSSuperview" ref="1024577213"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="230223094"/>
+								<reference key="NSNextKeyView" ref="1016267558"/>
 								<string key="NSReuseIdentifierKey">_NS:366</string>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -459,7 +460,7 @@ MA</string>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="1016267558"/>
+				<reference key="NSNextKeyView" ref="1024577213"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -1182,7 +1183,7 @@ MA</string>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>call_action_button_bg@2x.png</string>
-				<string>cat_icon_food_large.png</string>
+				<string>cat_icon_eDetail_food.png</string>
 				<string>logo_opentable.png</string>
 				<string>main_action_button_bg@2x.png</string>
 				<string>map_inner_shadow.png</string>
@@ -1191,7 +1192,7 @@ MA</string>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{23, 50}</string>
-				<string>{16, 16}</string>
+				<string>{21, 16}</string>
 				<string>{16, 16}</string>
 				<string>{11, 50}</string>
 				<string>{16, 16}</string>
