--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -68,8 +68,7 @@
                                 </div>
                                 <div class="text">
                                     <p class="main">A stamp is useful.</p>
-                                    <p class="minor">It's easy to try the great things 
-your friends have stamped.</p>
+                                    <p class="minor">It's easy to try the great things your friends have stamped.</p>
                                 </div>
                             </span>
                             
@@ -89,6 +88,18 @@ your friends have stamped.</p>
                                 <span class="thumbnail replaced">Video Thumbnail</span>
                                 <span>Watch the video</span>
                             </a>
+                        </div>
+                        <div id="press">
+                            <h3>AS FEATURED IN</h3>
+                            <ul>
+                                <li><a href="http://techcrunch.com/2011/11/21/stamped-approval/" class="techcrunch replaced">TechCrunch</a></li>
+                                <li><a href="http://blogs.wsj.com/digits/2011/11/22/new-ratings-app-takes-on-a-chef/" class="wsj replaced">The Wall Street Journal</a></li>
+                                <li><a href="http://daringfireball.net/linked/2011/11/21/stamped" class="daringfireball replaced">Daring Fireball</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="http://mashable.com/2011/11/25/stamped-iphone-recommendation-app/" class="mashable replaced">Mashable</a></li>
+                                <li><a href="http://gigaom.com/2011/11/21/stamped-recommendation-app/" class="gigaom replaced">GigaOm</a></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="bottom-wave"></div>
