--- a/internal/projects/bulleit/Interfaces/PlaceDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/PlaceDetailViewController.xib
@@ -50,7 +50,6 @@
 						<string key="NSFrame">{{150, 208}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -349,7 +348,7 @@ MA</string>
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<bool key="IBUIMultipleTouchEnabled">YES</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<bool key="IBMKScrollEnabled">NO</bool>
+										<bool key="IBMKShowsUserLocation">YES</bool>
 									</object>
 									<object class="IBUIImageView" id="935036623">
 										<reference key="NSNextResponder" ref="702444225"/>
