--- a/internal/projects/bulleit/Interfaces/FirstRunViewController.xib
+++ b/internal/projects/bulleit/Interfaces/FirstRunViewController.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
 		<string key="IBDocument.SystemVersion">11C74</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2148</string>
 		<string key="IBDocument.AppKitVersion">1138.23</string>
 		<string key="IBDocument.HIToolboxVersion">567.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">1145</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -54,7 +54,7 @@
 								<string key="NSFrame">{{-30, 0}, {380, 388}}</string>
 								<reference key="NSSuperview" ref="197941075"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="319280791"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:174</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -270,22 +270,6 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIImageView" id="319280791">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">271</int>
-						<string key="NSFrameSize">{320, 2}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="811322092"/>
-						<string key="NSReuseIdentifierKey">_NS:541</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">top-round-corner-mask@2x.png</string>
-						</object>
-					</object>
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
@@ -302,7 +286,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIScrollView" id="221051138">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">268</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -311,7 +295,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{67, 31}, {186, 186}}</string>
 						<reference key="NSSuperview" ref="221051138"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="259474293"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -327,7 +310,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{27, 261}, {266, 31}}</string>
 						<reference key="NSSuperview" ref="221051138"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="509136146"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -366,7 +348,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{27, 307}, {266, 31}}</string>
 						<reference key="NSSuperview" ref="221051138"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -397,7 +378,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{264, 266}, {22, 22}}</string>
 						<reference key="NSSuperview" ref="221051138"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="670562938"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -426,7 +406,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{18, 18}</string>
 								<reference key="NSSuperview" ref="670562938"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="797892496"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<reference key="IBUIBackgroundColor" ref="407695596"/>
@@ -438,7 +417,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{18, 18}</string>
 								<reference key="NSSuperview" ref="670562938"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="639653738"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<reference key="IBUIBackgroundColor" ref="407695596"/>
@@ -450,7 +428,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{18, 18}</string>
 								<reference key="NSSuperview" ref="670562938"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="627645974"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<reference key="IBUIBackgroundColor" ref="407695596"/>
@@ -465,7 +442,6 @@
 						</object>
 						<string key="NSFrame">{{266, 268}, {18, 18}}</string>
 						<reference key="NSSuperview" ref="221051138"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="906990150"/>
 						<string key="NSReuseIdentifierKey">_NS:196</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -477,8 +453,6 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 388}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="608762401"/>
 				<string key="NSReuseIdentifierKey">_NS:174</string>
 				<bool key="IBUIClipsSubviews">YES</bool>
@@ -486,7 +460,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIScrollView" id="1056128844">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">268</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -495,7 +469,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{125, 59}, {172, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="294653326"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -526,7 +499,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{23, 154}, {274, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="17759907"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -557,7 +529,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{125, 105}, {172, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="972441663"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -589,7 +560,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{23, 249}, {274, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="637011777"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -621,7 +591,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{23, 201}, {274, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="57952549"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -653,7 +622,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{35, 20}, {251, 19}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="546230272"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -669,7 +637,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{24, 58}, {78, 78}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="525932296"/>
 						<string key="NSReuseIdentifierKey">_NS:180</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -684,7 +651,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{79, 116}, {29, 29}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="918615380"/>
 						<string key="NSReuseIdentifierKey">_NS:222</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -709,7 +675,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{77, 342}, {220, 27}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="700790359"/>
 						<string key="NSReuseIdentifierKey">_NS:567</string>
 						<int key="IBUIContentMode">8</int>
@@ -725,7 +690,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{222, 356}, {75, 14}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<reference key="IBUIBackgroundColor" ref="407695596"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -753,7 +717,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{131, 356}, {70, 14}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="141276877"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<reference key="IBUIBackgroundColor" ref="407695596"/>
@@ -772,8 +735,6 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 388}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="406634172"/>
 				<string key="NSReuseIdentifierKey">_NS:174</string>
 				<bool key="IBUIClipsSubviews">YES</bool>
@@ -1174,7 +1135,6 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="811322092"/>
 							<reference ref="197941075"/>
-							<reference ref="319280791"/>
 						</object>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">View</string>
@@ -1229,11 +1189,6 @@
 						</object>
 						<reference key="parent" ref="197941075"/>
 						<string key="objectName">Background Scroll View</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">13</int>
-						<reference key="object" ref="319280791"/>
-						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
@@ -1427,7 +1382,6 @@
 					<string>108.IBPluginDependency</string>
 					<string>109.IBPluginDependency</string>
 					<string>12.IBPluginDependency</string>
-					<string>13.IBPluginDependency</string>
 					<string>16.CustomClassName</string>
 					<string>16.IBPluginDependency</string>
 					<string>19.IBPluginDependency</string>
@@ -1466,12 +1420,11 @@
 					<string>86.IBPluginDependency</string>
 					<string>99.IBPluginDependency</string>
 				</object>
-				<object class="NSMutableArray" key="dict.values">
+				<object class="NSArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>FirstRunViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIResponder</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1551,7 +1504,7 @@
 							<string>termsButtonPressed:</string>
 							<string>textFieldEditingChanged:</string>
 						</object>
-						<object class="NSMutableArray" key="dict.values">
+						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>id</string>
 							<string>id</string>
@@ -1576,7 +1529,7 @@
 							<string>termsButtonPressed:</string>
 							<string>textFieldEditingChanged:</string>
 						</object>
-						<object class="NSMutableArray" key="dict.values">
+						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBActionInfo">
 								<string key="name">cancelButtonPressed:</string>
@@ -1641,7 +1594,7 @@
 							<string>validationStamp2ImageView</string>
 							<string>validationStampView</string>
 						</object>
-						<object class="NSMutableArray" key="dict.values">
+						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIActivityIndicatorView</string>
 							<string>UIView</string>
@@ -1698,7 +1651,7 @@
 							<string>validationStamp2ImageView</string>
 							<string>validationStampView</string>
 						</object>
-						<object class="NSMutableArray" key="dict.values">
+						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBToOneOutletInfo">
 								<string key="name">activityIndicator</string>
@@ -1863,10 +1816,9 @@
 				<string>signin_check</string>
 				<string>stamp_detail_ripple_bottom@2x.png</string>
 				<string>stamped_logo_large@2x.png</string>
-				<string>top-round-corner-mask@2x.png</string>
 				<string>welcome_fineprint.png</string>
 			</object>
-			<object class="NSMutableArray" key="dict.values">
+			<object class="NSArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{58, 58}</string>
 				<string>{16, 16}</string>
@@ -1879,10 +1831,9 @@
 				<string>{16, 16}</string>
 				<string>{620, 7}</string>
 				<string>{372, 372}</string>
-				<string>{640, 4}</string>
 				<string>{220, 27}</string>
 			</object>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">1145</string>
 	</data>
 </archive>
